@@ -489,14 +489,20 @@ sub reply {
     my $storage = $self->_storage_obj;
     my $toke    = $self->_tokenizer_obj;
 
-    my @key_tokens;
+    my (@tokens, $reply);
     if (defined $input) {
         $input = $self->_clean_input($input);
-        my @tokens = $toke->make_tokens($input);
-        @key_tokens = $toke->find_key_tokens(\@tokens);
+        @tokens = $toke->make_tokens($input);
+        my @key_tokens = $toke->find_key_tokens(\@tokens);
+        $reply = $storage->make_reply(\@key_tokens);
     }
 
-    my $reply = $storage->make_reply(\@key_tokens);
+    # if we got no input, or the reply is the same as the input,
+    # we generate a random reply
+    if (!defined $input || defined $reply && "@tokens" eq "@$reply") {
+        $reply = $storage->make_reply([ ]);
+    }
+
     return if !defined $reply;
     return $toke->make_output($reply);
 }
